examples/canary-project/src/bad/consumer-e.ts
import { hub } from './hub.js'
export const consumer_e = (): string => hub()
